[package]
name = "rdxl_book"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Components for compiling books with RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_book"
documentation = "https://docs.rs/rdxl/"
keywords = ["book","gitbook","rdxl"]
